--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -19,6 +19,7 @@
 //  Transitions
 
 @simple-transition:     0.2s ease 0s;
+@opacity-transition:    opacity 0.1s ease;
 
 
 //  Effects
